# ChessGizmo

./: .gitignore  README.md  chess_analyzer.py  chess_data_fetch.py  config.py  dtypes.py  graph_visualization.py  models.py  mysql_interaction.py  postgresql_interaction.py  pyproject.toml  setup.py  telegram_bot_data_generator.py
models/MySQL_scriprts/: add_new_columns.sql  av_value_gen.sql  update_replace_neg1_with_null.sql  update_replace_null_with_neg1.sql
src/chessgizmo/: __init__.py  chess_analyzer.py  chess_data_fetch.py  config.py  graph_visualization.py  models.py  postgresql_interaction.py
src/chessgizmo/data/models/blitz/: cbr_best_params.pkl  data_transformer.pkl
src/chessgizmo/data/models/rapid/: cbr_best_params.pkl  data_transformer.pkl  knn_classificator.pkl
src/chessgizmo/sql/PostgreSQL_scripts/: add_new_columns.sql  av_value_gen.sql  update_replace_neg1_with_null.sql  update_replace_null_with_neg1.sql
